After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669607 - [0.11] directsoundsink: Fix compiling
[0.11] directsoundsink: Fix compiling
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.11.x
Other Windows
: Normal normal
: 0.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-07 21:43 UTC by Raimo Järvi
Modified: 2012-02-07 23:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compiling (752 bytes, patch)
2012-02-07 21:45 UTC, Raimo Järvi
committed Details | Review

Description Raimo Järvi 2012-02-07 21:43:59 UTC
Compiling fails, because gstdirectsoundsink.h tries to include a non-existent gstdirectsoundringbuffer.h.
Comment 1 Raimo Järvi 2012-02-07 21:45:34 UTC
Created attachment 207026 [details] [review]
Fix compiling
Comment 2 Tim-Philipp Müller 2012-02-07 23:21:20 UTC
commit 697dcc60b4d18507d0551b3e04fc76834091763f
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Tue Feb 7 23:41:13 2012 +0200

    directsoundsink: Fix compiling
    
    https://bugzilla.gnome.org/show_bug.cgi?id=669607