directsoundsink: Fix compiling

https://bugzilla.gnome.org/show_bug.cgi?id=669607